--- a/package.json
+++ b/package.json
@@ -4,16 +4,27 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.ts"
+    "start": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql"
   },
   "author": "Adam Rasfeld",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.19.0",
-    "graphql": "^15.4.0"
+    "apollo-server-express": "^2.19.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "graphql": "^15.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.9",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^7.2.7",
+    "@types/mongodb": "^3.5.34",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
